  Removes the 'Up', 'Previous' and 'Next' links from the top of each standard
  library module's documentation.
  (John Whitington, review by David Allsopp)

- #1351: Document `-output-complete-obj` option in the manual.
  (François Bobot, Nicolás Ojeda Bär, review by Daniel Bünzli and Damien
  Doligez)

### Compiler user-interface and warnings:

- #9960: extend ocamlc/ocamlopt's -o option to work when compiling C files
  (Sébastien Hinderer, reported by Daniel Bünzli, review by Florian
  Angeletti and Gabriel Scherer)

- #10095: simplify the syntax error messages produced by the compiler.
  In many cases, the compiler would produce an error message that looked
  potentially helpful but was actually misguided and arguably confusing,
  because the error message implicitly referred to an earlier point in
  the source code than the point explicitly shown in the error message.
  (François Pottier, review by Gabriel Scherer and Frédéric Bour.)

- #10196, #10197: better error message on empty character literals ''.
  (Gabriel Scherer, review by David Allsopp and Florian Angeletti
   and Daniel Bünzli, report by Robin Björklin)

- #8877: Call the linker when ocamlopt is invoked with .o and .a files only.
  (Greta Yorsh, review by Leo White)

- #10207: deprecate single uppercase or lowercase letter in warning
  specifications.
  The form `-w aBcD` was equivalent to `-w -a+b-c+d`.
  It is now deprecated to improve the coexistence with warning mnemonics.
  (Florian Angeletti, review by Damien Doligez and Gabriel Scherer)

- #10232: Warning for unused record fields.
  (Leo White, review by Florian Angeletti)

### Internal/compiler-libs changes:

- #9243, simplify parser rules for array indexing operations
  (Florian Angeletti, review by Damien Doligez and Gabriel Scherer)

- #9650, #9651: keep refactoring the pattern-matching compiler
  (Gabriel Scherer, review by Thomas Refis and Florian Angeletti)

- #9994: Make Types.type_expr a private type, and abstract marking mechanism