@@ -1,6 +1,6 @@
 (* TEST
 include unix
-flags += "-strict-sequence -safe-string -w +A -warn-error +A"
+flags += "-strict-sequence -safe-string -w +A-70 -warn-error +A"
 modules = "stubs.c"
 * libwin32unix
 ** bytecode
