@@ -76,8 +76,8 @@ INCLUDES = $(addprefix -I $(ROOTDIR)/,utils parsing typing bytecomp \
                        middle_end middle_end/closure middle_end/flambda \
                        middle_end/flambda/base_types driver toplevel \
                        file_formats lambda)
-COMPFLAGS = -absname -w +a-4-9-41-42-44-45-48 -strict-sequence -warn-error +A \
- -principal -safe-string -strict-formats -bin-annot $(INCLUDES)
+COMPFLAGS = -absname -w +a-4-9-41-42-44-45-48-70 -strict-sequence \
+-warn-error +A -principal -safe-string -strict-formats -bin-annot $(INCLUDES)
 LINKFLAGS = $(INCLUDES)
 VPATH := $(filter-out -I,$(INCLUDES))
 
