@@ -106,6 +106,7 @@ type t =
   | Unused_functor_parameter of string      (* 67 *)
   | Match_on_mutable_state_prevent_uncurry  (* 68 *)
   | Unused_field of string * field_usage_warning (* 69 *)
+  | Missing_mli                             (* 70 *)
 ;;
 
 type alert = {kind:string; message:string; def:loc; use:loc}
