@@ -172,6 +172,9 @@ Working version
 
 ### Compiler user-interface and warnings:
 
+- #9407: added warning for missing mli interface file
+  (Anukriti Kumar, review by Florian Angeletti)
+
 - #9960: extend ocamlc/ocamlopt's -o option to work when compiling C files
   (Sébastien Hinderer, reported by Daniel Bünzli, review by Florian
   Angeletti and Gabriel Scherer)
